# English-Pronunciation-Classifier

./: .gitignore  English_Pronunciation_Classifier.py  README.md  main.ipynb  pyproject.toml  requirements.txt
files/: label_encoder.pkl  model_evaluation.csv
models/self-trained/: GradientBoostingClassifier.pkl  KNeighborsClassifier.pkl  LinearSVC.pkl
pages/: 01_Practice_Pronunciation_(Basic).py  02_Practice_Pronunciation_(Advanced).py
